# imgdup

./: .gitignore  Cargo.toml  README.md  imgdup-runner.sh  imgdup.py  justfile  lib.just  makefile
.cargo/: config.toml
cbzdup/: Cargo.toml
cbzdup/src/: cbz_reader.rs  lib.rs
common-libs/: Cargo.toml
common-libs/src/: bktree.rs  imghash.rs  lib.rs
common-libs/src/bin_common/args/: preproc.rs
common-libs/src/bktree/: source_types.rs
common-libs/src/bktree/source_types/: any_source.rs  string_source.rs
ffmpeg/: .gitignore  README.md  justfile
imgdup-common/: Cargo.toml
imgdup-common/src/: utils.rs
imgdup-common/src/bin_common/: args.rs  ignored_hashes.rs  init.rs  termination.rs
imgdup-common/src/bin_common/args/: args_helper.rs  one_color.rs  preproc.rs  remove_borders.rs  similarity.rs
imgdup-common/src/bktree/: bktree.rs  deferred_box.rs  file_array.rs
imgdup-common/src/imghash/: hamming.rs
imgdup-common/src/utils/: imgutils.rs  math.rs  percent.rs  plot.rs  repo.rs  simple_path.rs  time.rs  timeline.rs
src/: bin_common.rs  bktree.rs  bktree2.rs  common.rs  db.rs  error_stack_utils.rs  file_array.rs  frame_extractor.rs  fsutils.rs  heap.rs  imghash.rs  imgutils.rs  lib.rs  log.rs  main.rs  perf.rs  plot.rs  repo.rs  utils.rs  work_queue.rs
src/bin_common/: args.rs  hash_images.rs  ignored_hashes.rs  init.rs
src/bin_common/args/: args_helper.rs  black_mask.rs  blandness.rs  one_color.rs  preproc.rs  remove_borders.rs  similarity.rs
src/bktree/: bktree.rs  hamming.rs  mmap.rs  source_types.rs  sqlite.rs
src/bktree/mmap/: bktree.rs  deferred_box.rs  entry.rs  file_array.rs
src/bktree/source_types/: any_source.rs  string_source.rs  video_source.rs
src/bktree/sqlite/: bktree.rs  heap.rs  sql.rs
src/common/: hash_images.rs  tree_src_types.rs
src/frame_extractor/: frame_extractor.rs  timestamp.rs
src/heap/: priority_queue.rs  sql.rs
src/imghash/: hamming.rs  imghash.rs  preproc.rs  similarity.rs
src/utils/: args_helper.rs  fsutils.rs  imgutils.rs  math.rs  perf.rs  repo.rs  simple_path.rs  work_queue.rs  workers.rs
tests/: bktree_test.rs  frame_extractor_test.rs  linked_list.rs  linked_list_test.rs  sqlite_linked_list_test.rs
tests/common/: mod.rs
video_tests/: .gitignore  lib.just
video_tests/annoying_videos/: justfile  run.sh
video_tests/blandness/: bland  interesting  justfile  should
video_tests/border_removal/: .gitignore  justfile  run.sh
video_tests/compare_all_hashes/: .gitignore  get_frames.sh  justfile  run.sh
video_tests/dress_rehearsal/: .gitignore  .imgduprc  .videoduprc  justfile  reset.sh  run.sh
video_tests/frame_extract/: .gitignore  justfile  run.sh
video_tests/ignored/: .imgduprc  justfile  run.sh
video_tests/preproc/: bland  interesting  justfile
videodup/: Cargo.toml
videodup/src/: debug_info.rs  frame_extractor.rs  lib.rs  video_source.rs
videodup/src/frame_extractor/: frame_extractor.rs  logger.rs  timestamp.rs
