[package]
name = "imgdup"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
color-eyre = {version = "0.6", default-features = false}
log = "0.4"
simplelog = "0.12"

# For plotting perf.rs and stuff (and generating imgdup debug info?)
# TODO: reduce features
plotters = "0.3"

# For the heap on the file system
rusqlite = {version = "0.29", features = ["blob"]}
serde = {version = "1", features = ["derive"]}
bincode = "1"
indexmap = "1"
const_format = "0.2"

# For video processing
ffmpeg-next = "=6.0" # NOTE: does not follow semver
ffmpeg-sys-next = "=6.0"
libc = "0.2"
base64 = "0.21"

# For image processing
image_hasher = "=1.2.0"
image = "0.24"

# For CLI flags
clap = { version = "4.3", features = ["derive"] }
humantime = "2.1"
rand = {version = "0.8", features = ["small_rng"]}

[dev-dependencies]
tempfile = "3"

[profile.dev.build-override]
opt-level = 3

[profile.release]
strip = "debuginfo"
lto = "thin"
