[workspace]
members = [
  "common-libs",
  "videodup",
]
resolver = "2"

[workspace.dependencies]
# Errors and logs
thiserror = "1"
color-eyre = {version = "0.6", default-features = false}
log = "0.4"
simplelog = "0.12"

# For plotting perf.rs and stuff (and generating imgdup debug info?)
# TODO: reduce features
plotters = "0.3"

# For all bins
rayon = "1.8"
signal-hook = {version = "0.3", default_features = false}
rand = {version = "0.8", features = ["small_rng"]}

# For video processing
ffmpeg-next = "=6.0" # NOTE: does not follow semver
ffmpeg-sys-next = "=6.0"
libc = "0.2"
base64 = "0.21"

# For image processing
image_hasher = "=1.2.0"
image = "0.24"

# For CLI flags
clap = { version = "4.3", features = ["derive"] }
humantime = "2.1"
paste = "1.0"

# For bktree
rkyv = {version="0.7", features=["validation", "size_64", "std"], default_features=false}
memmap2 = "0.7"
replace_with = "0.1"
derivative = "2.2"

# For testing in bktree
tempfile = "3"

[profile.dev.build-override]
opt-level = 3

[profile.release]
# NOTE: its nice to have debuginfo
# strip = "debuginfo"
# NOTE: in fact, lets make sure some are actually included, but not everything
debug = "limited"
# NOTE: optimizes between crates
lto = "thin"
