[package]
name = "imgdup-common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror.workspace = true
color-eyre.workspace = true
log.workspace = true
fern-format.workspace = true
fern.workspace = true

plotters.workspace = true

signal-hook.workspace = true

image_hasher.workspace = true
image.workspace = true

clap.workspace = true
humantime.workspace = true
rand.workspace = true

rkyv.workspace = true
memmap2.workspace = true
replace_with.workspace = true
derivative.workspace = true

base64.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
